<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivAuthorPicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/author_picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAuthorNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/author_name_label"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivAuthorPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvAuthorNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Author's Name" />

    <TextView
        android:id="@+id/tvRepositoryNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/repository_name_label"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivAuthorPicture"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorNameLabel" />

    <TextView
        android:id="@+id/tvRepositoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivAuthorPicture"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryNameLabel"
        tools:text="Repository Name" />

    <TextView
        android:id="@+id/tvForksQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toEndOf="@+id/ivAuthorPicture"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="5.000" />

    <TextView
        android:id="@+id/tvForksQuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/forks_quantity_label"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvForksQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvStarsQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvForksQuantityLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="40.000" />

    <TextView
        android:id="@+id/tvStarsQuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/stars_quantity_label"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvStarsQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>